--- a/functional/index.html
+++ b/functional/index.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#functional-usage-of-rust" id="functional-usage-of-rust">Functional Usage of Rust</a></h1>
+                        <h1 id="functional-usage-of-rust"><a class="header" href="#functional-usage-of-rust">Functional Usage of Rust</a></h1>
 <p>Rust is an imperative language, but it follows many
 <a href="https://en.wikipedia.org/wiki/Functional_programming">functional programming</a> paradigms.</p>
 <blockquote>
