--- a/functional/paradigms.html
+++ b/functional/paradigms.html
@@ -167,12 +167,12 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#programming-paradigms" id="programming-paradigms">Programming paradigms</a></h1>
+                        <h1 id="programming-paradigms"><a class="header" href="#programming-paradigms">Programming paradigms</a></h1>
 <p>One of the biggest hurdles to understanding functional programs when coming
 from an imperative background is the shift in thinking. Imperative programs
 describe <strong>how</strong> to do something, whereas declarative programs describe
 <strong>what</strong> to do. Let's sum the numbers from 1 to 10 to show this.</p>
-<h2><a class="header" href="#imperative" id="imperative">Imperative</a></h2>
+<h2 id="imperative"><a class="header" href="#imperative">Imperative</a></h2>
 <pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -202,7 +202,7 @@ Then we print it out.</p>
 </tbody></table>
 <p>This is how most of us start out programming. We learn that a program is a set
 of steps.</p>
-<h2><a class="header" href="#declarative" id="declarative">Declarative</a></h2>
+<h2 id="declarative"><a class="header" href="#declarative">Declarative</a></h2>
 <pre><pre class="playground"><code class="language-rust edition2018">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
