--- a/idioms/ctor.html
+++ b/idioms/ctor.html
@@ -167,11 +167,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#constructors" id="constructors">Constructors</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="constructors"><a class="header" href="#constructors">Constructors</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Rust does not have constructors as a language construct. Instead, the
 convention is to use a static <code>new</code> method to create an object.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-rust ignore">// A Rust vector, see liballoc/vec.rs
 pub struct Vec&lt;T&gt; {
     buf: RawVec&lt;T&gt;,
@@ -193,7 +193,7 @@ impl&lt;T&gt; Vec&lt;T&gt; {
     }
 }
 </code></pre>
-<h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
+<h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
 <p>The <a href="../patterns/builder.html">builder pattern</a> for constructing objects where
 there are multiple configurations.</p>
 
