--- a/idioms/index.html
+++ b/idioms/index.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#idioms" id="idioms">Idioms</a></h1>
+                        <h1 id="idioms"><a class="header" href="#idioms">Idioms</a></h1>
 <p><a href="https://en.wikipedia.org/wiki/Programming_idiom">Idioms</a> are commonly used
 styles and patterns largely agreed upon by a community. They are guidelines.
 Writing idiomatic code allows other developers to understand what is happening
