--- a/idioms/rustdoc-init.html
+++ b/idioms/rustdoc-init.html
@@ -167,12 +167,12 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#easy-doc-initialization" id="easy-doc-initialization">Easy doc initialization</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="easy-doc-initialization"><a class="header" href="#easy-doc-initialization">Easy doc initialization</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>If a struct takes significant effort to initialize, when writing docs, it can be
 quicker to wrap your example with a helper function which takes the struct as an
 argument.</p>
-<h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
+<h2 id="motivation"><a class="header" href="#motivation">Motivation</a></h2>
 <p>Sometimes there is a struct with multiple or complicated parameters and several
 methods. Each of these methods should have examples.</p>
 <p>For example:</p>
@@ -203,7 +203,7 @@ impl Connection {
     }
 }
 </code></pre>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>Instead of typing all of this boiler plate to create an <code>Connection</code> and
 <code>Request</code> it is easier to just create a wrapping helper function which takes
 them as arguments:</p>
@@ -230,13 +230,13 @@ impl Connection {
 <p><strong>Note</strong> in the above example the line <code>assert!(response.is_ok());</code> will not
 actually run while testing because it is inside of a function which is never
 invoked.</p>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>This is much more concise and avoids repetitive code in examples.</p>
-<h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
+<h2 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h2>
 <p>As example is in a function, the code will not be tested. Though it will still be
 checked to make sure it compiles when running a <code>cargo test</code>. So this pattern is
 most useful when you need <code>no_run</code>. With this, you do not need to add <code>no_run</code>.</p>
-<h2><a class="header" href="#discussion" id="discussion">Discussion</a></h2>
+<h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
 <p>If assertions are not required this pattern works well.</p>
 <p>If they are, an alternative can be to create a public method to create a helper
 instance which is annotated with <code>#[doc(hidden)]</code> (so that users won't see it).
