--- a/patterns/behavioural/intro.html
+++ b/patterns/behavioural/intro.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#behavioural-patterns" id="behavioural-patterns">Behavioural Patterns</a></h1>
+                        <h1 id="behavioural-patterns"><a class="header" href="#behavioural-patterns">Behavioural Patterns</a></h1>
 <p>From <a href="https://en.wikipedia.org/wiki/Behavioral_pattern">Wikipedia</a>:</p>
 <blockquote>
 <p>Design patterns that identify common communication patterns among objects.
