--- a/patterns/creational/intro.html
+++ b/patterns/creational/intro.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#creational-patterns" id="creational-patterns">Creational Patterns</a></h1>
+                        <h1 id="creational-patterns"><a class="header" href="#creational-patterns">Creational Patterns</a></h1>
 <p>From <a href="https://en.wikipedia.org/wiki/Creational_pattern">Wikipedia</a>:</p>
 <blockquote>
 <p>Design patterns that deal with object creation mechanisms, trying to create objects
