--- a/patterns/ffi/intro.html
+++ b/patterns/ffi/intro.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#ffi-patterns" id="ffi-patterns">FFI Patterns</a></h1>
+                        <h1 id="ffi-patterns"><a class="header" href="#ffi-patterns">FFI Patterns</a></h1>
 <p>Writing FFI code is an entire course in itself.
 However, there are several idioms here that can act as pointers, and avoid traps
 for inexperienced users of unsafe Rust.</p>
