--- a/patterns/structural/intro.html
+++ b/patterns/structural/intro.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#structural-patterns" id="structural-patterns">Structural Patterns</a></h1>
+                        <h1 id="structural-patterns"><a class="header" href="#structural-patterns">Structural Patterns</a></h1>
 <p>From <a href="https://en.wikipedia.org/wiki/Structural_pattern">Wikipedia</a>:</p>
 <blockquote>
 <p>Design patterns that ease the design by identifying a simple way to realize relationships
