--- a/additional_resources/index.html
+++ b/additional_resources/index.html
@@ -167,9 +167,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#additional-resources" id="additional-resources">Additional resources</a></h1>
+                        <h1 id="additional-resources"><a class="header" href="#additional-resources">Additional resources</a></h1>
 <p>A collection of complementary helpful content</p>
-<h2><a class="header" href="#talks" id="talks">Talks</a></h2>
+<h2 id="talks"><a class="header" href="#talks">Talks</a></h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=Pm_oO0N5B9k">Design Patterns in Rust</a> by
 Nicholas Cameron at the PDRust (2016)</li>
@@ -178,7 +178,7 @@ by Pascal Hertleif at RustFest (2017)</li>
 <li><a href="https://www.youtube.com/watch?v=vqavdUGKeb4">Rust Programming Techniques</a> by
 Nicholas Cameron at LinuxConfAu (2018)</li>
 </ul>
-<h2><a class="header" href="#books-online" id="books-online">Books (Online)</a></h2>
+<h2 id="books-online"><a class="header" href="#books-online">Books (Online)</a></h2>
 <ul>
 <li><a href="https://rust-lang.github.io/api-guidelines">The Rust API Guidelines</a></li>
 </ul>
