--- a/anti_patterns/index.html
+++ b/anti_patterns/index.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#anti-patterns" id="anti-patterns">Anti-patterns</a></h1>
+                        <h1 id="anti-patterns"><a class="header" href="#anti-patterns">Anti-patterns</a></h1>
 <p>An <a href="https://en.wikipedia.org/wiki/Anti-pattern">anti-pattern</a> is a solution to
 a &quot;recurring problem that is usually ineffective and risks being highly
 counterproductive&quot;. Just as valuable as knowing how to solve a problem, is
