--- a/idioms/ffi/accepting-strings.html
+++ b/idioms/ffi/accepting-strings.html
@@ -167,8 +167,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#accepting-strings" id="accepting-strings">Accepting Strings</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="accepting-strings"><a class="header" href="#accepting-strings">Accepting Strings</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>When accepting strings via FFI through pointers, there are two principles that
 should be followed:</p>
 <ol>
@@ -176,7 +176,7 @@ should be followed:</p>
 <li>Minimize the amount of complexity and <code>unsafe</code> code involved in converting
 from a C-style string to native Rust strings.</li>
 </ol>
-<h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
+<h2 id="motivation"><a class="header" href="#motivation">Motivation</a></h2>
 <p>The strings used in C have different behaviours to those used in Rust, namely:</p>
 <ul>
 <li>C strings are null-terminated while Rust strings store their length</li>
@@ -190,7 +190,7 @@ called <code>CString</code> and <code>&amp;CStr</code>, that allow us to avoid a
 and <code>unsafe</code> code involved in converting between C strings and Rust strings.</p>
 <p>The <code>&amp;CStr</code> type also allows us to work with borrowed data, meaning passing
 strings between Rust and C is a zero-cost operation.</p>
-<h2><a class="header" href="#code-example" id="code-example">Code Example</a></h2>
+<h2 id="code-example"><a class="header" href="#code-example">Code Example</a></h2>
 <pre><code class="language-rust ignore">pub mod unsafe_module {
 
     // other module content
@@ -226,7 +226,7 @@ strings between Rust and C is a zero-cost operation.</p>
     }
 }
 </code></pre>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>The example is is written to ensure that:</p>
 <ol>
 <li>The <code>unsafe</code> block is as small as possible.</li>
@@ -292,7 +292,7 @@ Vector will cause <code>undefined behaviour</code>!</p>
 Sometimes it would panic because the string was not <code>UTF-8</code>, sometimes it would
 put a weird character at the end of the string, sometimes it would just
 completely crash.</p>
-<h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
+<h2 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h2>
 <p>None?</p>
 
                     </main>
