--- a/idioms/ffi/intro.html
+++ b/idioms/ffi/intro.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#ffi-idioms" id="ffi-idioms">FFI Idioms</a></h1>
+                        <h1 id="ffi-idioms"><a class="header" href="#ffi-idioms">FFI Idioms</a></h1>
 <p>Writing FFI code is an entire course in itself.
 However, there are several idioms here that can act as pointers, and avoid
 traps for inexperienced users of <code>unsafe</code> Rust.</p>
