--- a/idioms/ffi/passing-strings.html
+++ b/idioms/ffi/passing-strings.html
@@ -167,8 +167,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#passing-strings" id="passing-strings">Passing Strings</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="passing-strings"><a class="header" href="#passing-strings">Passing Strings</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>When passing strings to FFI functions, there are four principles that should be
 followed:</p>
 <ol>
@@ -178,7 +178,7 @@ followed:</p>
 <li>Unless the Foreign Function API requires it, the ownership of the string
 should not transfer to the callee.</li>
 </ol>
-<h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
+<h2 id="motivation"><a class="header" href="#motivation">Motivation</a></h2>
 <p>Rust has built-in support for C-style strings with its <code>CString</code> and <code>CStr</code>
 types. However, there are different approaches one can take with strings that
 are being sent to a foreign function call from a Rust function.</p>
@@ -187,7 +187,7 @@ are being sent to a foreign function call from a Rust function.</p>
 <em>the object must live long enough</em>, meaning the lifetime should be maximized.
 In addition, the documentation explains that &quot;round-tripping&quot; a <code>CString</code> after
 modification is UB, so additional work is necessary in that case.</p>
-<h2><a class="header" href="#code-example" id="code-example">Code Example</a></h2>
+<h2 id="code-example"><a class="header" href="#code-example">Code Example</a></h2>
 <pre><code class="language-rust ignore">pub mod unsafe_module {
 
     // other module content
@@ -226,7 +226,7 @@ modification is UB, so additional work is necessary in that case.</p>
     }
 }
 </code></pre>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>The example is written in a way to ensure that:</p>
 <ol>
 <li>The <code>unsafe</code> block is as small as possible.</li>
@@ -255,7 +255,7 @@ created.</p>
 zeroes is &quot;slow&quot;. However, recent versions of Rust actually optimize that
 particular macro to a call to <code>zmalloc</code>, meaning it is as fast as the operating
 system's ability to return zeroed memory (which is quite fast).</p>
-<h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
+<h2 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h2>
 <p>None?</p>
 
                     </main>
