--- a/idioms/temporary-mutability.html
+++ b/idioms/temporary-mutability.html
@@ -167,14 +167,14 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#temporary-mutability" id="temporary-mutability">Temporary mutability</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="temporary-mutability"><a class="header" href="#temporary-mutability">Temporary mutability</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Often it is necessary to prepare and process some data, but after that data are
 only inspected and never modified. The intention can be made explicit by redefining
 the mutable variable as immutable.</p>
 <p>It can be done either by processing data within nested block or by redefining
 variable.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>Say, vector must be sorted before usage.</p>
 <p>Using nested block:</p>
 <pre><code class="language-rust ignore">let data = {
@@ -192,9 +192,9 @@ let data = data;
 
 // Here `data` is immutable.
 </code></pre>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>Compiler ensures that you don't accidentally mutate data after some point.</p>
-<h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
+<h2 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h2>
 <p>Nested block requires additional indentation of block body.
 One more line to return data from block or redefine variable.</p>
 
