--- a/intro.html
+++ b/intro.html
@@ -167,16 +167,16 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#introduction" id="introduction">Introduction</a></h1>
-<h2><a class="header" href="#participation" id="participation">Participation</a></h2>
+                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<h2 id="participation"><a class="header" href="#participation">Participation</a></h2>
 <p>If you are interested in contributing to this book, check out the
 <a href="https://github.com/rust-unofficial/patterns/blob/master/CONTRIBUTING.md">contribution guidelines</a>.</p>
-<h2><a class="header" href="#design-patterns" id="design-patterns">Design patterns</a></h2>
+<h2 id="design-patterns"><a class="header" href="#design-patterns">Design patterns</a></h2>
 <p>When developing programs, we have to solve many problems.
 A program can be viewed as a solution to a problem.
 It can also be viewed as a collection of solutions to many different problems.
 All of these solutions work together to solve a bigger problem.</p>
-<h2><a class="header" href="#design-patterns-in-rust" id="design-patterns-in-rust">Design patterns in Rust</a></h2>
+<h2 id="design-patterns-in-rust"><a class="header" href="#design-patterns-in-rust">Design patterns in Rust</a></h2>
 <p>There are many problems that share the same form.
 Due to the fact that Rust is not object-oriented design patterns vary with
 respect to other object-oriented programming languages.
