--- a/patterns/behavioural/RAII.html
+++ b/patterns/behavioural/RAII.html
@@ -167,14 +167,14 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#raii-with-guards" id="raii-with-guards">RAII with guards</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="raii-with-guards"><a class="header" href="#raii-with-guards">RAII with guards</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p><a href="https://en.wikipedia.org/wiki/Resource_Acquisition_Is_Initialization">RAII</a> stands for &quot;Resource Acquisition is Initialisation&quot; which is a
 terrible name. The essence of the pattern is that resource initialisation is done
 in the constructor of an object and finalisation in the destructor. This pattern
 is extended in Rust by using an RAII object as a guard of some resource and relying
 on the type system to ensure that access is always mediated by the guard object.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>Mutex guards are the classic example of this pattern from the std library (this
 is a simplified version of the real implementation):</p>
 <pre><code class="language-rust ignore">use std::ops::Deref;
@@ -231,14 +231,14 @@ fn baz(x: Mutex&lt;Foo&gt;) {
     // x is unlocked when we exit this function and xx's destructor is executed.
 }
 </code></pre>
-<h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
+<h2 id="motivation"><a class="header" href="#motivation">Motivation</a></h2>
 <p>Where a resource must be finalised after use, RAII can be used to do this
 finalisation. If it is an error to access that resource after finalisation, then
 this pattern can be used to prevent such errors.</p>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>Prevents errors where a resource is not finalised and where a resource is used
 after finalisation.</p>
-<h2><a class="header" href="#discussion" id="discussion">Discussion</a></h2>
+<h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
 <p>RAII is a useful pattern for ensuring resources are properly deallocated or
 finalised. We can make use of the borrow checker in Rust to statically prevent
 errors stemming from using resources after finalisation takes place.</p>
@@ -259,7 +259,7 @@ is shorter than the lifetime of <code>self</code>.</p>
 <p>Note that implementing <code>Deref</code> is not a core part of this pattern, it only makes
 using the guard object more ergonomic. Implementing a <code>get</code> method on the guard
 works just as well.</p>
-<h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
+<h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
 <p><a href="../idioms/dtor-finally.html">Finalisation in destructors idiom</a></p>
 <p>RAII is a common pattern in C++: <a href="http://en.cppreference.com/w/cpp/language/raii">cppreference.com</a>,
 <a href="https://en.wikipedia.org/wiki/Resource_Acquisition_Is_Initialization">wikipedia</a>.</p>
