--- a/patterns/behavioural/strategy.html
+++ b/patterns/behavioural/strategy.html
@@ -167,8 +167,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#strategy-aka-policy" id="strategy-aka-policy">Strategy (aka Policy)</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="strategy-aka-policy"><a class="header" href="#strategy-aka-policy">Strategy (aka Policy)</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>The <a href="https://en.wikipedia.org/wiki/Strategy_pattern">Strategy design pattern</a>
 is a technique that enables separation of concerns.
 It also allows to decouple software modules through <a href="https://en.wikipedia.org/wiki/Dependency_inversion_principle">Dependency Inversion</a>.</p>
@@ -180,14 +180,14 @@ while the general algorithm workflow remains the same. In other words, the abstr
 specification of the class does not depend on the specific implementation of the
 derived class, but specific implementation must adhere to the abstract specification.
 This is why we call it &quot;Dependency Inversion&quot;.</p>
-<h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
+<h2 id="motivation"><a class="header" href="#motivation">Motivation</a></h2>
 <p>Imagine we are working on a project that generates reports every month.
 We need the reports to be generated in different formats (strategies), e.g.,
 in <code>JSON</code> or <code>Plain Text</code> formats.
 But things vary over time and we don't know what kind of requirement we may get
 in the future. For example, we may need to generate our report in a completly new
 format, or just modify one of the existing formats.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>In this example our invariants (or abstractions) are <code>Context</code>, <code>Formatter</code>,
 and <code>Report</code>, while <code>Text</code> and <code>Json</code> are our strategy structs. These strategies
 have to implement the <code>Formatter</code> trait.</p>
@@ -249,17 +249,17 @@ fn main() {
     assert!(s.contains(r#&quot;{&quot;two&quot;:&quot;2&quot;}&quot;#));
 }
 </code></pre></pre>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>The main advantage is separation of concerns. For example, in this case <code>Report</code>
 does not know anything about specific implementations of <code>Json</code> and <code>Text</code>,
 whereas the output implementations does not care about how data is preprocessed,
 stored, and fetched. The only thing they have to know is context and a specific
 trait and method to implement, i.e,<code>Formatter</code> and <code>run</code>.</p>
-<h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
+<h2 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h2>
 <p>For each strategy there must be implemented at least one module, so number of modules
 increases with number of strategies. If there are many strategies to choose from
 then users have to know how strategies differ from one another.</p>
-<h2><a class="header" href="#discussion" id="discussion">Discussion</a></h2>
+<h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
 <p>In the previous example all strategies are implemented in a single file.
 Ways of providing different strategies includes:</p>
 <ul>
@@ -315,7 +315,7 @@ fn main() {
     assert_eq!(82, val.map(first_byte_strategy).unwrap());
 }
 </code></pre></pre>
-<h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
+<h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Strategy_pattern">Strategy Pattern</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Dependency_injection">Dependency Injection</a></li>
