--- a/patterns/ffi/wrappers.html
+++ b/patterns/ffi/wrappers.html
@@ -167,8 +167,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#type-consolidation-into-wrappers" id="type-consolidation-into-wrappers">Type Consolidation into Wrappers</a></h1>
-<h2><a class="header" href="#description" id="description">Description</a></h2>
+                        <h1 id="type-consolidation-into-wrappers"><a class="header" href="#type-consolidation-into-wrappers">Type Consolidation into Wrappers</a></h1>
+<h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>This pattern is designed to allow gracefully handling multiple related types,
 while minimizing the surface area for memory unsafety.</p>
 <p>One of the cornerstones of Rust's aliasing rules is lifetimes.
@@ -182,7 +182,7 @@ which Rust can do nothing about. However, some API designs place higher burdens
 than others on the code written in the other language.</p>
 <p>The lowest risk API is the &quot;consolidated wrapper&quot;, where all possible interactions
 with an object are folded into a &quot;wrapper type&quot;, while keeping the Rust API clean.</p>
-<h2><a class="header" href="#code-example" id="code-example">Code Example</a></h2>
+<h2 id="code-example"><a class="header" href="#code-example">Code Example</a></h2>
 <p>To understand this, let us look at a classic example of an API to export: iteration
 through a collection.</p>
 <p>That API looks like this:</p>
@@ -216,18 +216,18 @@ impl MySetWrapper {
 }
 </code></pre>
 <p>As a result, the wrapper is simple and contains no <code>unsafe</code> code.</p>
-<h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
+<h2 id="advantages"><a class="header" href="#advantages">Advantages</a></h2>
 <p>This makes APIs safer to use, avoiding issues with lifetimes between types.
 See <a href="./export.html">Object-Based APIs</a> for more on the advantages and pitfalls
 this avoids.</p>
-<h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
+<h2 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h2>
 <p>Often, wrapping types is quite difficult, and sometimes a Rust API compromise
 would make things easier.</p>
 <p>As an example, consider an iterator which does not efficiently implement <code>nth()</code>.
 It would definitely be worth putting in special logic to make the object handle
 iteration internally, or to support a different access pattern efficiently that
 only the Foreign Function API will use.</p>
-<h3><a class="header" href="#trying-to-wrap-iterators-and-failing" id="trying-to-wrap-iterators-and-failing">Trying to Wrap Iterators (and Failing)</a></h3>
+<h3 id="trying-to-wrap-iterators-and-failing"><a class="header" href="#trying-to-wrap-iterators-and-failing">Trying to Wrap Iterators (and Failing)</a></h3>
 <p>To wrap any type of iterator into the API correctly, the wrapper would need to
 do what a C version of the code would do: erase the lifetime of the iterator,
 and manage it manually.</p>
